dynamic area calculation done and reduced some functions

--- a/index.html
+++ b/index.html
@@ -154,38 +154,49 @@
             <!-- area calculation div -->
             <div class="ml-6 px-6 border border-gray-200 rounded-lg h-3/5 w-1/5">
                 <h1 class="text-xl font-medium underline text-center mb-6">Area Calculation</h1>
-                <div id="" class="">
-                    <div id="triangle" class="flex justify-between items-center mb-3 hidden">
-                        <h1 class="">1. Triangle</h1>
+              <div id="area-calculation-div" class="">
+                <table class="table w-full">
+                    <tbody id="table-container">
+                      <!-- <tr>
+                        <th>1</th>
+                        <td>Cy Ganderton</td>
+                        <td>Quality Control Specialist</td>
+                      </tr> -->
+                    </tbody>
+                </table>
+                    <!-- <div id="triangle" class="flex justify-between items-center mb-3 hidden">
+                        <h1 class=""><span id="triangle-serial">1</span>. Triangle</h1>
                         <h1 id="triangle-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m<sup>2</sup></button>
                     </div>
                     <div id="rectangle" class="flex justify-between items-center mb-3 hidden">
-                        <h1 class="">2. Rectangle</h1>
+                        <h1 class=""><span id="rectangle-serial">2</span>. Rectangle</h1>
                         <h1 id="rectangle-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m<sup>2</sup></button>
                     </div>
                     <div id="parallelogram" class="flex justify-between items-center mb-3 hidden">
-                        <h1 class="">3. Parallelogram</h1>
+                        <h1 class=""><span class="serial-number">3</span>. Parallelogram</h1>
                         <h1 id="parallelogram-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m<sup>2</sup></button>
                     </div>
                     <div id="rhombus" class="flex justify-between items-center mb-3 hidden">
-                        <h1 class="">4. Rhombus</h1>
+                        <h1 class=""><span class="serial-number">4</span>. Rhombus</h1>
                         <h1 id="rhombus-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m<sup>2</sup></button>
                     </div>
                     <div id="pentagon" class="flex justify-between items-center mb-3 hidden">
-                        <h1 class="">5. Pentagon</h1>
+                        <h1 class=""><span class="serial-number">5</span>. Pentagon</h1>
                         <h1 id="pentagon-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m<sup>2</sup></button>
                     </div>
                     <div id="ellipse" class="flex justify-between items-center mb-3 hidden">
-                        <h1 class="">6. Ellipse</h1>
+                        <h1 class=""><span class="serial-number">6</span>. Ellipse</h1>
                         <h1 id="ellipse-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m<sup>2</sup></button>
-                    </div>
-                </div>
+                    </div> -->
+              </div>
+
+
                 
             </div>
         </section>
