--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Flowbite CDN added -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
-    <!-- <style>
-        .color-change:hover{
-            background-color: aqua;
+    <style>
+        .marginBottom{
+            height: 50px;
         }
-    </style> -->
+    </style>
   </head>
   <body>
     <header class="flex justify-between items-center w-11/12 mx-auto mt-6 bg-sky-200 rounded-lg">
@@ -22,19 +22,19 @@
         <h3 class="text-neutral-500">Geometry Genius</h3>
       </div>
       <div class="m-5 text-xl font-medium">
-        <button class="px-8 py-2 bg-blue-500 rounded-lg text-white">Blog</button>
+        <a href="blogs.html"><button class="px-8 py-2 bg-blue-500 rounded-lg text-white">Blog</button></a>
       </div>
     </header>
 
     <main class="w-11/12 mx-auto my-6">
-        <section class=" flex justify-start w-full">
+        <section class="flex flex-col md:flex-row justify-start">
             <!-- cards div -->
-            <div class="grid grid-cols-3 gap-3 w-4/5">
+            <div class="grid lg:grid-cols-3 md:grid-cols-1 gap-3 mx-auto md:w-9/12">
                 <!-- triangle div -->
                 <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center color-change">
                     <img class="mt-3" src="images/triangle.png" alt="" />
                     <div class="p-5 text-center">
-                        <h5 class="mb-2 text-2xl font-bold">Triangle</h5>
+                        <h5 class="mb-2 text-2xl  font-bold">Triangle</h5>
                         <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x b x h</p>
                         <!-- inputs -->
                         <div class="flex flex-row gap-2 mb-3">
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <!-- area calculation div -->
-            <div class="ml-6 px-6 border border-gray-200 rounded-lg h-3/5 w-1/5">
+            <div class="mx-auto mt-3 md:mt-0 md:ml-6 px-6 border border-gray-200 rounded-lg h-3/5 w-full md:w-3/12">
                 <h1 class="text-xl font-medium underline text-center mb-6">Area Calculation</h1>
               <div id="area-calculation-div" class="">
                 <table class="table w-full">
