refactoring code with comments

--- a/blogs.html
+++ b/blogs.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blogs</title>
     <!-- tailwind CDN added -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-200">
     <main>
         <section class="mx-auto mt-12 w-9/12 text-center">
+            <!-- question-answer-1 -->
             <h1 class="m-2 text-3xl font-semibold">What is DOM and what is the purpose of DOM?</h1>
             <h1 class="m-2 text-lg font-medium">DOM means Document Object Meaning. In javaScript, we can change the html document structure, style, and content.</h1> 
+            <!-- question-answer-2 -->
             <h1 class="m-2 text-3xl font-semibold">How will you select HTML elements using DOM? Name the DOM methods.</h1>
             <h1 class="m-2 text-lg font-medium"> By using the below DOM methods we can select HTML elements. For example: if we want to use getElementById() method then we must declare an id to the html element that we want to select.
                 <p>DOM Methods:</p>
@@ -22,10 +24,12 @@
                 <p>4.querySelector()</p> 
                 <p>5.querySelectorAll()</p>
             </h1>   
+            <!-- question-answer-3 -->
             <h1 class="m-2 text-3xl font-semibold">What is event bubble?</h1>
-            <h1 class="m-2 text-lg font-medium">Event Bubbling is a concept in the DOM. It happens when an element receives an event, and that event bubbles up to its parent and ancestor elements in the DOM tree until it gets to the root element.</h1>   
+            <h1 class="m-2 text-lg font-medium">Event Bubbling happens when an element receives an event, and that event bubbles up to its parent and ancestor elements in the DOM tree until it gets to the root element. On other words, bubbling is basically traveling from child element to root parent element. </h1>   
+            <!-- question-answer-4 -->
             <h1 class="m-2 text-3xl font-semibold">What is a callback function and why will you use it?</h1>
-            <h1 class="m-2 text-lg font-medium">Any function that is passed as an argument to another function so that it can be executed in that other function is called as a callback function.</h1>     
+            <h1 class="m-2 text-lg font-medium">A callback function is a function that is passed as an argument to another function so that it can be executed in that other function.</h1>     
         </section>
     </main>
 </body>
